# wave

./: .gitignore  README.md  pyproject.toml
.vim/: coc-settings.json
src/audio/_hear/: _audio.py
src/audio/fourier/: form.py  sinusoid.py
src/audio/sinusoid/: _sinusoid.py
src/audio/sinusoid/_op/: build.py  (+3 more)
src/audio/system/: _audio.py  interface.py
src/wave/fourier/: __init__.py  coeff.py
src/wave/sound/: __init__.py  _bind.py
src/wave/stream/: _buffer.py  generators.py
src/wave/synth/: README.md
src/wave/system/: __init__.py
wave/noise/: __init__.py
wave/sound/: __init__.py  _sound.py  synth.py
wave/sound/base/: sound.py
wave/sound/noise/: white.py
wave/sound/old/: __init__.py  pluck.py
wave/sound/primitive/: __init__.py  primitive.py  sawtooth.py  sine.py
wave/spectralold/: slice.py
wave/spectralold/domain/: domain.py
wave/synth/: .gitmodules
wave/trackold/: old.py
wave/trackold/music/: spectrum.py
wave/trackold/param/: param.py  tempo.py
wave/transformold/: __init__.py  fill.py  shape.py  transform.py  warp.py
wave/transformold/_base/: __init__.py  effect.py
wave/transformold/core/: __init__.py  filter.py  gain.py  q.py  range.py
wave/transformold/echo/: echo.py
wave/transformold/envelope/: envelope.py
wave/transformold/eq/: param.py  shape.py
wave/transformold/pan/: pan.py
wave/transformold/scale/: blend.py  scale.py
wave/transformold/volume/: base.py  compress.py
wave/transformold/vv/: compressor.py
wave/wave/: __init__.py
wave/wave/freq/: __init__.py  base.py  period.py
wave/wave/waveform/: ops.py
(+80 files in other folders)
