[tool.poetry]
name = "wave"
version = "0.1.0"
description = "Sinusoid waveform composition."
authors = ["jedhsu <jedhsu@pm.me>"]
readme = "README.md"
repository = "https://github.com/jedhsu/wave"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.2"
av = "^8.0.3"
sympy = "^1.8"
sounddevice = "^0.4.2"
acoustics = "^0.2.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
